--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -10,6 +10,7 @@
 
     <!-- CSS -->
      <link rel="stylesheet" href="../../mock_website/css/hondacivicRS.css">
+     <link rel="stylesheet" href="../../mock_website/css/hondacivicRS(keyframe).css">
 </head>
 <body>
     <div class="navbar">
@@ -32,7 +33,7 @@
                 <span></span>
             </div>
         </div>
-    </nav>
+    </div>
 
     <!-- Hero Section -->
      <section id="home" class="hero">
@@ -74,6 +75,60 @@
         </div>
      </section>
 
-     
+     <!-- Features Section -->
+      <section id="features" class="features">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Engineered for Excellence</h2>
+                <p class="section-subtitle">
+                    Discover the features that make the Civic RS extraordinary
+                </p>
+            </div>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="featureicon">🚗</div>
+                    <h3 class="feature-title">Sport-Tuned Suspension</h3>
+                    <p class="feature-description">
+                        Precision-engineered suspension system delivers superior handling and comfort on every road.
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <div class="featureicon">⚡</div>
+                    <h3 class="feature-title">Turbocharged Engine</h3>
+                    <p class="feature-description">
+                        1.5L VTEC Turbo engine provides impressive power and fuel efficiency.
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <div class="featureicon">📱</div>
+                    <h3 class="feature-title">Honda Sensing</h3>
+                    <p class="feature-description">
+                        Advanced safety and driver-assistive technologies keep you protected.
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <div class="featureicon">🎵</div>
+                    <h3 class="feature-title">Premium Audio</h3>
+                    <p class="feature-description">
+                        12-speaker Bose® premium audio system for an immersive sound experience.
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <div class="featureicon">💺</div>
+                    <h3 class="feature-title">Sport-Tuned Suspension</h3>
+                    <p class="feature-description">
+                        Red-stitched sport seats provide comfort and support during spirited driving.
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <div class="featureicon">🌐</div>
+                    <h3 class="feature-title">Connected Services</h3>
+                    <p class="feature-description">
+                        Stay connected with Honda Connect® and wireless smartphone integration.
+                    </p>
+                </div>
+            </div>
+        </div>
+      </section>
 </body>
 </html>
