--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap">
 
     <!-- CSS -->
-     <link rel="stylesheet" href="../../mock_website/css/hondacivicRS.css">
-     <link rel="stylesheet" href="../../mock_website/css/hondacivicRS(keyframe).css">
+    <link rel="stylesheet" href="../../mock_website/css/hondacivicRS.css">
+    <link rel="stylesheet" href="../../mock_website/css/hondacivicRS(keyframe).css">
 </head>
 <body>
     <div class="navbar">
@@ -27,7 +27,7 @@
                 <a href="#contact" class="nav-link">Contact</a>
                 <a href="#" class="nav-link cta-link">Book a Test Drive</a>
             </div>
-            <div class="hamburger" id="hambuger">
+            <div class="hamburger" id="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -36,10 +36,10 @@
     </div>
 
     <!-- Hero Section -->
-     <section id="home" class="hero">
+    <section id="home" class="hero">
         <div class="hero-content">
             <h1 class="hero-title">
-                <span class="title-main">Honda Civic RS</span>
+                <span class="title-main">Civic RS</span>
                 <span class="title-sub">Performance Redefined</span>
             </h1>
             <p class="hero-description">
@@ -48,8 +48,8 @@
                 drive that sets your pulse racing.
             </p>
             <div class="hero-buttons">
-                <button class="btn btn-primary">Explore Features</button>
-                <button class="btn btn-secondary">Watch Video</button>
+                <button type="button" class="btn btn-primary">Explore Features</button>
+                <button type="button" class="btn btn-secondary">Watch Video</button>
             </div>
             <div class="hero-stats">
                 <div class="stat">
@@ -73,10 +73,10 @@
         <div class="scroll-indicator">
             <div class="scroll-arrow"></div>
         </div>
-     </section>
+    </section>
 
-     <!-- Features Section -->
-      <section id="features" class="features">
+    <!-- Features Section -->
+    <section id="features" class="features">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Engineered for Excellence</h2>
@@ -129,6 +129,25 @@
                 </div>
             </div>
         </div>
-      </section>
+    </section>
+
+    <section id="specs" class="specs">
+        <div class="container">
+            <div class="specs-content">
+                <div class="specs-text">
+                    <h2 class="section-title">Technical Specification</h2>
+                    <div class="specs-grid">
+                        <h3>Engine & Performance</h3>
+                        <ul class="spec-list">
+                            <li><span>Engine Type:</span> 1.5L DOHC VTEC Turbo</li>
+                            <li><span>Max Power:</span> 180 HP @ 6000 rpm</li>
+                            <li><span>Max Torque:</span> 240 Nm @ 1700-5500 rpm</li>
+                            <li><span>Transmission:</span> CVT with Sport Mode</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
