--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -137,14 +137,37 @@
                 <div class="specs-text">
                     <h2 class="section-title">Technical Specification</h2>
                     <div class="specs-grid">
-                        <h3>Engine & Performance</h3>
-                        <ul class="spec-list">
-                            <li><span>Engine Type:</span> 1.5L DOHC VTEC Turbo</li>
-                            <li><span>Max Power:</span> 180 HP @ 6000 rpm</li>
-                            <li><span>Max Torque:</span> 240 Nm @ 1700-5500 rpm</li>
-                            <li><span>Transmission:</span> CVT with Sport Mode</li>
-                        </ul>
+                        <div class="spec-group">
+                            <h3>Engine & Performance</h3>
+                            <ul class="spec-list">
+                                <li><span>Engine Type:</span> 1.5L DOHC VTEC Turbo</li>
+                                <li><span>Max Power:</span> 180 HP @ 6000 rpm</li>
+                                <li><span>Max Torque:</span> 240 Nm @ 1700-5500 rpm</li>
+                                <li><span>Transmission:</span> CVT with Sport Mode</li>
+                            </ul>
+                        </div>
+                        <div class="spec-group">
+                            <h3>Dimensions & Capacity</h3>
+                            <ul class="spec-list">
+                                <li><span>Length:</span> 4648 mm</li>
+                                <li><span>Width:</span> 1800 mm</li>
+                                <li><span>Height:</span> 1416 mm</li>
+                                <li><span>Seating:</span> 5 passengers</li>
+                            </ul>
+                        </div>
+                        <div class="spec-group">
+                            <h3>Safety & Technology</h3>
+                            <ul class="spec-list">
+                                <li><span>Safety Rating:</span> 5-Star ASEAN NCAP</li>
+                                <li><span>Airbags:</span> 6 SRS Airbags</li>
+                                <li><span>Display:</span> 9" Touchscreen</li>
+                                <li><span>Connectivity:</span> Apple CarPlay & Android Auto</li>
+                            </ul>
+                        </div>
                     </div>
+                </div>
+                <div class="specs-image">
+                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=600&h=800&fit=crop&crop=center" alt="Civic RS Interior" class="spec-img">
                 </div>
             </div>
         </div>
