--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -48,8 +48,8 @@
                 drive that sets your pulse racing.
             </p>
             <div class="hero-buttons">
-                <button type="button" class="btn btn-primary">Explore Features</button>
-                <button type="button" class="btn btn-secondary">Watch Video</button>
+                <button class="btn btn-primary">Explore Features</button>
+                <button class="btn btn-secondary">Watch Video</button>
             </div>
             <div class="hero-stats">
                 <div class="stat">
@@ -135,7 +135,7 @@
         <div class="container">
             <div class="specs-content">
                 <div class="specs-text">
-                    <h2 class="section-title">Technical Specification</h2>
+                    <h2 class="section-title">Technical Specifications</h2>
                     <div class="specs-grid">
                         <div class="spec-group">
                             <h3>Engine & Performance</h3>
@@ -168,6 +168,48 @@
                 </div>
                 <div class="specs-image">
                     <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=600&h=800&fit=crop&crop=center" alt="Civic RS Interior" class="spec-img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Gallery Section -->
+    <section id="gallery" class="gallery">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Gallery</h2>
+                <p class="section-subtitle">See the Civic RS from every angle</p>
+            </div>
+            <div class="gallery-grid">
+                <div class="gallery-item large">
+                    <img src="../../upload/images/hondacivic001.webp" alt="Civic RS Front View">
+                    <div class="gallery-overlay">
+                        <span class="gallery-text">Simple Side Design</span>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="../../upload/images/hondacivic002.webp" alt="Civic RS Side View">
+                    <div class="gallery-overlay">
+                        <span class="gallery-text">Back Design</span>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="../../upload/images/hondacivic003.webp" alt="Civic RS Dashboard">
+                    <div class="gallery-overlay">
+                        <span class="gallery-text">Aggressive Front Design</span>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="../../upload/images/hondacivic004.webp" alt="Civic RS Rear View">
+                    <div class="gallery-overlay">
+                        <span class="gallery-text">Cockpit</span>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="../../upload/images/hondacivic005.webp" alt="Civic RS Engine">
+                    <div class="gallery-overlay">
+                        <span class="gallery-text">9 inch Navigatoin</span>
+                    </div>
                 </div>
             </div>
         </div>
