--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -38,37 +38,39 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">
-                <span class="title-main">Civic RS</span>
-                <span class="title-sub">Performance Redefined</span>
-            </h1>
-            <p class="hero-description">
-                Experience the perfect fusion of sporty design, cutting-edge technology, 
-                and exceptional performance. The Honda Civic RS delivers an exhilarating 
-                drive that sets your pulse racing.
-            </p>
-            <div class="hero-buttons">
-                <button class="btn btn-primary">Explore Features</button>
-                <button class="btn btn-secondary">Watch Video</button>
+            <div class="hero-text">
+                <h1 class="hero-title">
+                    <span class="title-main">Civic RS</span>
+                    <span class="title-sub">Performance Redefined</span>
+                </h1>
+                <p class="hero-description">
+                    Experience the perfect fusion of sporty design, cutting-edge technology, 
+                    and exceptional performance. The Honda Civic RS delivers an exhilarating 
+                    drive that sets your pulse racing.
+                </p>
+                <div class="hero-buttons">
+                    <button class="btn btn-primary">Explore Features</button>
+                    <button class="btn btn-secondary">Watch Video</button>
+                </div>
+                <div class="hero-stats">
+                    <div class="stat">
+                        <span class="stat-number">180</span>
+                        <span class="stat-label">HP</span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-number">8.2</span>
+                        <span class="stat-label">0-100 km/h</span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-number">6.5L</span>
+                        <span class="stat-label">Fuel Economy</span>
+                    </div>
+                </div>
             </div>
-            <div class="hero-stats">
-                <div class="stat">
-                    <span class="stat-number">180</span>
-                    <span class="stat-label">HP</span>
-                </div>
-                <div class="stat">
-                    <span class="stat-number">8.2</span>
-                    <span class="stat-label">0-100 km/h</span>
-                </div>
-                <div class="stat">
-                    <span class="stat-number">6.5L</span>
-                    <span class="stat-label">Fuel Economy</span>
-                </div>
+            <div class="hero-image">
+                <img src="../../upload/images/hondacivic_hero.webp" alt="Honda Civic RS" class="car-image">
+                <div class="image-overlay"></div>
             </div>
-        </div>
-        <div class="hero-image">
-            <img src="../../upload/images/hondacivic_hero.webp" alt="Honda Civic RS" class="car-image">
-            <div class="image-overlay"></div>
         </div>
         <div class="scroll-indicator">
             <div class="scroll-arrow"></div>
