--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -133,6 +133,7 @@
         </div>
     </section>
 
+    <!-- Specification Section -->
     <section id="specs" class="specs">
         <div class="container">
             <div class="specs-content">
@@ -216,5 +217,70 @@
             </div>
         </div>
     </section>
+
+        <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <div class="contact-content">
+                <div class="contact-info">
+                    <h2 class="section-title">Ready to Experience the RS?</h2>
+                    <p class="contact-description">
+                        Schedule your test drive today and feel the power of the Honda Civic RS. 
+                        Our team is ready to help you find the perfect configuration.
+                    </p>
+                    <div class="contact-details">
+                        <div class="contact-item">
+                            <span class="contact-icon">📍</span>
+                            <div>
+                                <h4>Visit Our Showroom</h4>
+                                <p>123 Auto Street, City Center</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <span class="contact-icon">📞</span>
+                            <div>
+                                <h4>Call Us</h4>
+                                <p>+1 (555) 123-4567</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <span class="contact-icon">⏰</span>
+                            <div>
+                                <h4>Open Hours</h4>
+                                <p>Mon-Sat: 9AM-8PM, Sun: 10AM-6PM</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-form">
+                    <form class="form">
+                        <div class="form-group">
+                            <input type="text" placeholder="Full Name" class="form-input" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" placeholder="Email Address" class="form-input" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="tel" placeholder="Phone Number" class="form-input" required>
+                        </div>
+                        <div class="form-group">
+                            <select class="form-input" required>
+                                <option value="">Select Interest</option>
+                                <option value="test-drive">Schedule Test Drive</option>
+                                <option value="quote">Request Quote</option>
+                                <option value="brochure">Download Brochure</option>
+                                <option value="service">Service Information</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <textarea placeholder="Message (Optional)" class="form-input form-textarea"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary form-submit">Send Message</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
