--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -282,5 +282,55 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <img src="https://images.unsplash.com/photo-1606016159834-8bbf004e8e8c?w=50&h=50&fit=crop&crop=center" alt="Honda Logo" class="footer-logo">
+                    <h3>HONDA CIVIC RS</h3>
+                    <p>Performance Redefined</p>
+                </div>
+                <div class="footer-links">
+                    <div class="footer-column">
+                        <h4>Vehicle</h4>
+                        <ul>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">Specifications</a></li>
+                            <li><a href="#">Gallery</a></li>
+                            <li><a href="#">Colors</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-column">
+                        <h4>Services</h4>
+                        <ul>
+                            <li><a href="#">Test Drive</a></li>
+                            <li><a href="#">Financing</a></li>
+                            <li><a href="#">Service & Parts</a></li>
+                            <li><a href="#">Warranty</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-column">
+                        <h4>Support</h4>
+                        <ul>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Find Dealer</a></li>
+                            <li><a href="#">Owner Portal</a></li>
+                            <li><a href="#">FAQs</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Honda Motor Co., Ltd. All rights reserved.</p>
+                <div class="footer-social">
+                    <a href="#" class="social-link">Facebook</a>
+                    <a href="#" class="social-link">Instagram</a>
+                    <a href="#" class="social-link">Twitter</a>
+                    <a href="#" class="social-link">YouTube</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
