--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -11,6 +11,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../../mock_website/css/hondacivicRS.css">
     <link rel="stylesheet" href="../../mock_website/css/hondacivicRS(keyframe).css">
+
+    <!-- Javascript -->
+     <script src="../../mock_website/javascript/hondacivicRS.js"></script>
 </head>
 <body>
     <div class="navbar">
