--- a/html/index.html
+++ b/html/index.html
@@ -304,7 +304,7 @@
                         <div class="project-slide">
                             <div class="project-card">
                                 <div class="project-thumbnail">
-                                    <img src="landingpage1.jpg" alt="Landing Page 1">
+                                    <img src="../upload/images/hondacivicRS.webp" alt="Honda Civic Rs">
                                 </div>
                                 <div class="project-info">
                                     <h3>Product Landing Page</h3>
@@ -314,14 +314,14 @@
                                         <span>CSS</span>
                                         <span>Javascript</span>
                                     </div>
-                                    <a href="#" class="project-link">View Project</a>
+                                    <a href="https://jujuwork.github.io/PHP_Road/mock_website/html/hondacivicRS.html" class="project-link">View Project</a>
                                 </div>
                             </div>
                         </div>
                         <div class="project-slide">
                             <div class="project-card">
                                 <div class="project-thumbnail">
-                                    <img src="landingpage2.jpg" alt="Landing Page 2">
+                                    <img src="../upload/images/yoga.webp" alt="Yoga Reservation">
                                 </div>
                                 <div class="project-info">
                                     <h3>Product Landing Page</h3>
@@ -331,7 +331,7 @@
                                         <span>CSS</span>
                                         <span>Javascript</span>
                                     </div>
-                                    <a href="#" class="project-link">View Project</a>
+                                    <a href="https://jujuwork.github.io/PHP_Road/mock_website/html/yoga.html" class="project-link">View Project</a>
                                 </div>
                             </div>
                         </div>
