--- a/html/index.html
+++ b/html/index.html
@@ -277,7 +277,7 @@
                                         <span>CSS</span>
                                         <span>Javascript</span>
                                     </div>
-                                    <a href="https://jujuwork.github.io/PHP_Road/html/index.html?" class="project-link">View Project</a>
+                                    <a href="https://jujuwork.github.io/PHP_Road/html/index.html?" class="project-link" target="_blank">View Project</a>
                                 </div>
                             </div>
                         </div>
@@ -314,7 +314,7 @@
                                         <span>CSS</span>
                                         <span>Javascript</span>
                                     </div>
-                                    <a href="https://jujuwork.github.io/PHP_Road/mock_website/html/hondacivicRS.html" class="project-link">View Project</a>
+                                    <a href="https://jujuwork.github.io/PHP_Road/mock_website/html/hondacivicRS.html" class="project-link" target="_blank">View Project</a>
                                 </div>
                             </div>
                         </div>
@@ -331,7 +331,7 @@
                                         <span>CSS</span>
                                         <span>Javascript</span>
                                     </div>
-                                    <a href="https://jujuwork.github.io/PHP_Road/mock_website/html/yoga.html" class="project-link">View Project</a>
+                                    <a href="https://jujuwork.github.io/PHP_Road/mock_website/html/yoga.html" class="project-link" target="_blank">View Project</a>
                                 </div>
                             </div>
                         </div>
