--- a/html/index.html
+++ b/html/index.html
@@ -344,7 +344,7 @@
                                     <img src="home1.jpg" alt="Home Page 1">
                                 </div>
                                 <div class="project-info">
-                                    <h3>Business Homepage</h3>
+                                    <h3>Car Deatailer Homepage</h3>
                                     <p>A professional home for small business</p>
                                     <div class="project-tags">
                                         <span>HTML</span>
@@ -399,8 +399,8 @@
                                     <img src="php1.jpg" alt="PHP website 1">
                                 </div>
                                 <div class="project-info">
-                                    <h3>Simple Message Board</h3>
-                                    <p>A PHP-based Message Board for the town community.</p>
+                                    <h3>Todo List</h3>
+                                    <p>Todo List for daily routine</p>
                                     <div class="project-tags">
                                         <span>HTML</span>
                                         <span>CSS</span>
